// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleCard should match the snapshot when there are no notes 1`] = `
<div
  className="ScheduleCard"
>
  <p
    className="ScheduleCard--date"
  >
    Thu Apr 18 2019
  </p>
  <p
    className="ScheduleCard--time"
  >
    8:00 - 8:30 a.m.
  </p>
  <h3
    className="ScheduleCard--name"
  >
    Tiffany
  </h3>
  <p
    className="ScheduleCard--p"
  >
    Pronouns: 
    she/her
  </p>
  <p
    className="ScheduleCard--p"
  >
    Slack: 
    @tiffany
  </p>
  <p
    className="ScheduleCard--p"
  >
    Program: 
    FE Mod 4
  </p>
  <p
    className="ScheduleCard--p"
  >
    Notes: 
    no notes
  </p>
</div>
`;

exports[`ScheduleCard should match the snapshot when there are notes 1`] = `
<div
  className="ScheduleCard"
>
  <p
    className="ScheduleCard--date"
  >
    Thu Apr 18 2019
  </p>
  <p
    className="ScheduleCard--time"
  >
    8:00 - 8:30 a.m.
  </p>
  <h3
    className="ScheduleCard--name"
  >
    Tiffany
  </h3>
  <p
    className="ScheduleCard--p"
  >
    Pronouns: 
    she/her
  </p>
  <p
    className="ScheduleCard--p"
  >
    Slack: 
    @tiffany
  </p>
  <p
    className="ScheduleCard--p"
  >
    Program: 
    FE Mod 4
  </p>
  <p
    className="ScheduleCard--p"
  >
    Notes: 
    Help with JSFun problemset
  </p>
</div>
`;
